--- a/app/src/main/res/layout/map_info_window.xml
+++ b/app/src/main/res/layout/map_info_window.xml
@@ -6,7 +6,7 @@
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
-        android:minWidth="275dp">
+        android:maxWidth="300dp">
 
     <ImageView
             xmlns:android="http://schemas.android.com/apk/res/android"
@@ -15,19 +15,20 @@
             android:src="@drawable/ic_bus"
             android:id="@+id/type_image_info_window"
             android:contentDescription="@string/stop_type_content_description"
-            android:layout_marginStart="4dp"
+            app:layout_constraintStart_toStartOf="parent"
             android:layout_marginTop="4dp"
-            android:layout_marginBottom="4dp"
             app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginBottom="4dp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"/>
+            app:layout_constraintEnd_toStartOf="@+id/title_text_info_window"
+            app:layout_constraintHorizontal_bias="0.0"/>
 
     <TextView
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/title_text_info_window"
             android:layout_marginTop="6dp"
-            android:minWidth="200dp"
+            android:maxWidth="240dp"
             app:layout_constraintTop_toTopOf="parent"
             android:textAppearance="@android:style/TextAppearance.Material.Title"
             android:gravity="center"
@@ -35,7 +36,10 @@
             android:textSize="14sp"
             app:layout_constraintStart_toEndOf="@+id/type_image_info_window"
             android:textAlignment="center"
-            android:layout_marginStart="4dp"/>
+            android:layout_marginStart="4dp"
+            app:layout_constraintHorizontal_bias="0.5"
+            android:layout_marginBottom="4dp"
+            app:layout_constraintBottom_toTopOf="@+id/number_text_info_window"/>
 
     <TextView
             android:layout_width="wrap_content"
@@ -45,8 +49,7 @@
             android:layout_marginEnd="4dp"
             android:layout_marginBottom="4dp"
             app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginTop="4dp"
-            app:layout_constraintTop_toBottomOf="@+id/title_text_info_window"/>
+            android:textAlignment="center"/>
 
     <LinearLayout
             android:orientation="horizontal"
@@ -54,7 +57,7 @@
             android:layout_height="wrap_content"
             app:layout_constraintStart_toEndOf="@+id/type_image_info_window"
             android:layout_marginStart="8dp"
-            android:layout_marginBottom="4dp"
+            android:layout_marginBottom="6dp"
             app:layout_constraintBottom_toBottomOf="parent"
             android:layout_marginTop="4dp"
             app:layout_constraintTop_toBottomOf="@+id/title_text_info_window"
