--- a/app/src/main/res/layout/map_info_window.xml
+++ b/app/src/main/res/layout/map_info_window.xml
@@ -20,8 +20,8 @@
             app:layout_constraintTop_toTopOf="parent"
             android:layout_marginBottom="4dp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/title_text_info_window"
-            app:layout_constraintHorizontal_bias="0.0"/>
+            app:layout_constraintHorizontal_chainStyle="packed"
+            />
 
     <TextView
             android:layout_width="wrap_content"
@@ -31,43 +31,48 @@
             android:maxWidth="240dp"
             app:layout_constraintTop_toTopOf="parent"
             android:textAppearance="@android:style/TextAppearance.Material.Title"
-            android:gravity="center"
+            android:gravity="center_horizontal"
             app:layout_constraintEnd_toEndOf="parent"
-            android:textSize="14sp"
+            android:textSize="16sp"
             app:layout_constraintStart_toEndOf="@+id/type_image_info_window"
+            android:layout_marginBottom="4dp"
+            app:layout_constraintBottom_toTopOf="@+id/lines_layout"
             android:textAlignment="center"
             android:layout_marginStart="4dp"
-            app:layout_constraintHorizontal_bias="0.5"
-            android:layout_marginBottom="4dp"
-            app:layout_constraintBottom_toTopOf="@+id/number_text_info_window"/>
+            />
+
+    <GridLayout
+            android:orientation="horizontal"
+            android:columnCount="4"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="6dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginTop="4dp"
+            app:layout_constraintHorizontal_chainStyle="spread_inside"
+            app:layout_constraintTop_toBottomOf="@+id/title_text_info_window"
+            android:id="@+id/lines_layout"
+            android:gravity="start"
+            android:layout_marginEnd="4dp"
+            app:layout_constraintEnd_toStartOf="@+id/number_text_info_window"
+            android:layout_marginStart="52dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintHorizontal_weight="1"
+            >
+
+    </GridLayout>
 
     <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/number_text_info_window"
             app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="4dp"
-            android:layout_marginBottom="4dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:textAlignment="center"/>
-
-    <LinearLayout
-            android:orientation="horizontal"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintStart_toEndOf="@+id/type_image_info_window"
-            android:layout_marginStart="8dp"
-            android:layout_marginBottom="6dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginTop="4dp"
-            app:layout_constraintTop_toBottomOf="@+id/title_text_info_window"
-            android:id="@+id/lines_layout"
-            android:gravity="center"
             android:layout_marginEnd="8dp"
-            app:layout_constraintEnd_toStartOf="@+id/number_text_info_window"
-            app:layout_constraintHorizontal_bias="0.0">
-
-    </LinearLayout>
+            android:textAlignment="textEnd"
+            app:layout_constraintStart_toEndOf="@+id/lines_layout"
+            android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintHorizontal_weight="0"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
