--- a/app/src/main/res/layout/map_info_window_line.xml
+++ b/app/src/main/res/layout/map_info_window_line.xml
@@ -10,4 +10,5 @@
           android:textColor="@color/cyanea_background_light"
           android:textAlignment="center"
           android:layout_marginEnd="4dp"
+          android:layout_marginBottom="4dp"
         />
