--- a/app/src/main/res/layout/stop_details_destination.xml
+++ b/app/src/main/res/layout/stop_details_destination.xml
@@ -28,7 +28,8 @@
                     android:layout_marginEnd="10dp"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_alignParentTop="true">
+                    android:layout_alignParentTop="true"
+                    android:focusable="true">
 
                 <ImageView
                         android:id="@+id/type_image_stop_details"
