--- a/speedDial/src/main/res/layout/sd_fab_with_label_view.xml
+++ b/speedDial/src/main/res/layout/sd_fab_with_label_view.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
   ~ Copyright 2018 Roberto Leinardi.
   ~
   ~ Licensed under the Apache License, Version 2.0 (the "License");
@@ -16,37 +15,38 @@
   -->
 
 <merge xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools">
 
     <androidx.cardview.widget.CardView
-        android:id="@+id/sd_label_container"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_vertical"
-        android:clickable="true"
-        android:focusable="true"
-        android:foreground="?attr/selectableItemBackground"
-        app:cardCornerRadius="4dp"
-        app:cardElevation="1dp"
-        app:cardUseCompatPadding="true"
-        app:contentPadding="4dp">
-
-        <androidx.appcompat.widget.AppCompatTextView
-            android:id="@+id/sd_label"
-            style="@style/SpeedDial.FabLabelStyle"
+            android:id="@+id/sd_label_container"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            tools:text="A label" />
+            android:layout_gravity="center_vertical"
+            android:clickable="true"
+            android:focusable="true"
+            android:foreground="?attr/selectableItemBackground"
+            app:cardCornerRadius="4dp"
+            app:cardElevation="1dp"
+            app:cardUseCompatPadding="true"
+            app:contentPadding="4dp">
+
+        <androidx.appcompat.widget.AppCompatTextView
+                android:id="@+id/sd_label"
+                style="@style/SpeedDial.FabLabelStyle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                tools:text="A label" />
     </androidx.cardview.widget.CardView>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/sd_fab"
-        style="@style/Widget.MaterialComponents.FloatingActionButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_vertical|end"
-        app:fabSize="mini"
-        app:useCompatPadding="true" />
+            android:id="@+id/sd_fab"
+            style="@style/Widget.MaterialComponents.FloatingActionButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical|end"
+            android:importantForAccessibility="no"
+            app:fabSize="mini"
+            app:useCompatPadding="true" />
 
 </merge>
