--- a/material-intro-screen/src/main/res/layout/mis_fragment_slide.xml
+++ b/material-intro-screen/src/main/res/layout/mis_fragment_slide.xml
@@ -1,14 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<agency.tango.materialintroscreen.parallax.ParallaxLinearLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
+<agency.tango.materialintroscreen.parallax.ParallaxLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
         android:id="@+id/slide_background"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp"
         android:layout_marginTop="16dp"
+        android:layout_marginRight="16dp"
         android:background="@android:color/transparent"
         android:clipToPadding="false"
         android:fitsSystemWindows="false"
@@ -20,36 +19,37 @@
             android:id="@+id/image_slide"
             android:layout_width="wrap_content"
             android:layout_height="0dp"
-            android:layout_marginBottom="48dp"
             android:layout_marginLeft="52dp"
-            android:layout_marginRight="52dp"
             android:layout_marginTop="48dp"
+            android:layout_marginRight="52dp"
+            android:layout_marginBottom="48dp"
             android:layout_weight="1"
             android:adjustViewBounds="true"
             android:gravity="center"
-            app:mis_layout_parallaxFactor="0.6"
-            android:tint="#FAFAFA"/>
+            android:importantForAccessibility="no"
+            android:tint="#FAFAFA"
+            app:mis_layout_parallaxFactor="0.6" />
 
     <TextView
             android:id="@+id/txt_title_slide"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="center"
             android:layout_marginStart="16dp"
             android:layout_marginEnd="16dp"
+            android:gravity="center"
             android:textAppearance="@style/TextAppearance.AppCompat.Headline"
-            app:mis_layout_parallaxFactor="0.5"/>
+            app:mis_layout_parallaxFactor="0.5" />
 
     <TextView
             android:id="@+id/txt_description_slide"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="24dp"
-            android:layout_marginBottom="8dp"
             android:layout_marginStart="16dp"
+            android:layout_marginTop="24dp"
             android:layout_marginEnd="16dp"
+            android:layout_marginBottom="8dp"
             android:gravity="center"
             android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
-            app:mis_layout_parallaxFactor="0.2"/>
+            app:mis_layout_parallaxFactor="0.2" />
 
 </agency.tango.materialintroscreen.parallax.ParallaxLinearLayout>
