--- a/app/src/main/res/layout/theme_picker.xml
+++ b/app/src/main/res/layout/theme_picker.xml
@@ -1,40 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.coordinatorlayout.widget.CoordinatorLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
     <com.google.android.material.appbar.AppBarLayout
-            android:layout_height="wrap_content"
-            android:layout_width="match_parent">
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
         <androidx.appcompat.widget.Toolbar
                 android:id="@id/fragment_toolbar"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:minHeight="?attr/actionBarSize"
-                android:theme="@style/ActionBarTheme"/>
+                android:theme="@style/ActionBarTheme" />
 
     </com.google.android.material.appbar.AppBarLayout>
 
-        <GridView
-                android:id="@+id/gridView"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:clipToPadding="false"
-                android:columnWidth="140dp"
-                android:drawSelectorOnTop="true"
-                android:horizontalSpacing="8dp"
-                android:numColumns="auto_fit"
-                android:paddingBottom="8dp"
-                android:paddingEnd="4dp"
-                android:paddingStart="2dp"
-                android:paddingTop="8dp"
-                android:scrollbarStyle="outsideOverlay"
-                android:verticalSpacing="8dp"
-                tools:listitem="@layout/theme_item"
-                app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
+    <GridView
+            android:id="@+id/gridView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:clipToPadding="false"
+            android:columnWidth="140dp"
+            android:drawSelectorOnTop="true"
+            android:horizontalSpacing="8dp"
+            android:numColumns="auto_fit"
+            android:paddingStart="2dp"
+            android:paddingTop="8dp"
+            android:paddingEnd="4dp"
+            android:paddingBottom="8dp"
+            android:scrollbarStyle="outsideOverlay"
+            android:verticalSpacing="8dp"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior"
+            tools:listitem="@layout/theme_item" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
